--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
 <body>
 
 
-<img src="./assets/cominsoon.gif" alt="Nature" class="responsive" width="400" height="200">
+<img src="comingsoon.gif" alt="Nature" class="responsive" width="400" height="200">
 
 </body>
 </html>
